# shirin

./: .clang-format  .gitignore  CLAUDE.md  Makefile  README.md  meson.build
include/input/: input.h
include/math/: vec2.h
include/objects/: entity.h  player.h  scene.h
include/render/: game.h  minimap.h  raycaster.h  renderer.h
include/utils/: color.h  constants.h  input.h  logger.h
include/world/: color.h  constants.h  player.h  scene.h
src/: main.cpp
src/math/: vec2.cpp
src/objects/: player.cpp  scene.cpp
src/render/: game.cpp  minimap.cpp  raycaster.cpp  renderer.cpp
src/utils/: color.cpp
src/world/: color.cpp  player.cpp  scene.cpp
